--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 WDS_SOCKET_PORT=443
-REACT_APP_BACKEND_URL=https://bd893c47-db0a-4a06-87d3-8c1ebc86d059.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://crm-backend-1e1e.onrender.com
