--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-MONGO_URL="mongodb://localhost:27017"
-DB_NAME="test_database"
+MONGO_URL="mongodb+srv://cokuevn:Marxafg66@cluster0.85abc7p.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+
+DB_NAME="database_islam"
