--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URL="mongodb+srv://cokuevn:Marxafg66@cluster0.85abc7p.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URL="MONGO_URL = "mongodb+srv://cokuevn:Marxafg66@cluster0.85abc7p.mongodb.net/?retryWrites=true&w=majority&tls=true"
 
 DB_NAME="database_islam"
