--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URL="mongodb+srv://cokuevn:Marxafg66@cluster0.85abc7p.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URL="mongodb+srv://cokuevn:Test123456!@cluster0.85abc7p.mongodb.net/?retryWrites=true&w=majority"
 DB_NAME="database_islam"
