--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URL="mongodb+srv://cokuevn:Test123456!@cluster0.85abc7p.mongodb.net/?retryWrites=true&w=majority&authSource=admin"
-
+MONGO_URL="mongodb+srv://cokuevn:Test123456@cluster0.85abc7p.mongodb.net/?retryWrites=true&w=majority&authSource=admin"
 DB_NAME="database_islam"
+
