--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 WDS_SOCKET_PORT=443
-REACT_APP_BACKEND_URL=https://crm-backend-1e1e.onrender.com
+REACT_APP_BACKEND_URL=https://crm-backend-g67y.onrender.com
