--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,3 @@
-MONGO_URL="mongodb+srv://cokuevn:Test123456@cluster0.85abc7p.mongodb.net/?retryWrites=true&w=majority&authSource=admin"
-mongodb+srv://cokuev:12345678gg@cluster0.85abc7p.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL="mongodb+srv://cokuev:12345678gg@cluster0.85abc7p.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 DB_NAME="database_islam"
 
